docs: added all api endpoints
