# docs/api/sidebar.js
@@ -1,1 +1,1 @@
-module.exports = [{"type":"doc","id":"api/vatsim-api"},{"type":"category","label":"Members","link":{"type":"doc","id":"api/members"},"items":[{"type":"doc","id":"api/create-user","label":"Create user","className":"api-method post"},{"type":"doc","id":"api/get-user-details","label":"Get user details","className":"api-method get"},{"type":"doc","id":"api/modify-user","label":"Modify user","className":"api-method patch"},{"type":"doc","id":"api/get-user-statistics","label":"Get user statistics","className":"api-method get"},{"type":"doc","id":"api/get-user-activity-status","label":"Get user activity status","className":"api-method get"},{"type":"doc","id":"api/get-users-pre-filed-flightplans","label":"Get users pre-filed flightplans","className":"api-method get"}]}];
+module.exports = [{"type":"doc","id":"api/vatsim-api"},{"type":"category","label":"Members","link":{"type":"doc","id":"api/members"},"items":[{"type":"doc","id":"api/create-user","label":"Create user","className":"api-method post"},{"type":"doc","id":"api/get-user-details","label":"Get user details","className":"api-method get"},{"type":"doc","id":"api/modify-user","label":"Modify user","className":"api-method patch"},{"type":"doc","id":"api/get-user-statistics","label":"Get user statistics","className":"api-method get"},{"type":"doc","id":"api/get-user-activity-status","label":"Get user activity status","className":"api-method get"},{"type":"doc","id":"api/get-users-pre-filed-flightplans","label":"Get users pre-filed flightplans","className":"api-method get"}]},{"type":"category","label":"Organizations","link":{"type":"doc","id":"api/organizations"},"items":[{"type":"doc","id":"api/get-division-roster","label":"Get division roster","className":"api-method get"},{"type":"doc","id":"api/get-subdivision-roster","label":"Get subdivision roster","className":"api-method get"}]},{"type":"category","label":"ATC","link":{"type":"doc","id":"api/atc"},"items":[{"type":"doc","id":"api/get-online-atc","label":"Get online ATC","className":"api-method get"},{"type":"doc","id":"api/get-historical-atc-sessions","label":"Get historical ATC sessions","className":"api-method get"}]}];
